<resources>

    <string name="app_name">ViChar</string>
    <string name="app_description">ViChar Game</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="test_activity_game">Oh no! No connection! Are you on campus? Wifi on?</string>
    <string name="oauth_consumer_key">iLFFFcFcRnZ4y9NkYwqWg</string>
    <string name="oauth_consumer_secret">yD64YyfSF7AsIG0qkziTVImMdzcgbnihloCDtw3ER0</string>
    <string name="oauth_callback_url">http://www.PLACEHOLDERURL.com</string>
    <string name="oauth_access_token">oauth_access_token</string>
    <string name="oauth_token_secret">oauth_token_secret</string>
    <string name="ar_name">ViChar AR</string>
    <string name="tweet_icon">Twitter Icon</string>

    <!-- Text -->
    <string name="default_twitter_vote">Vote For Your Team!</string>
    <string name="inactive_twitter">No Current Vote!</string>
    <string name="conn_dialog">ViChar requires an active Wifi connection. Would you like to turn wifi on?</string>
    <string name="conn_dialog_connecting">Wifi is connecting#8230;</string>
    <string name="choose_username">Choose Username</string>
    <string name="play_as_guest">Play as Guest</string>
    <string name="about_info">Nathan, Kirah, Micheal, Robert, Davis</string>
    <string name="health_bar_title">Robot Energy</string>
    <string name="rules_intro">Welcome to ViChar, eyes! \n Your task is to render the robot\'s life \n as short as possible.</string>
    <string name="rules_fireballs">This can be accomplished by by shooting fireballs...</string>
    <string name="rules_overload">But if you get too close to the robot, your cortex overloads!</string>
    <string name="rules_minions">Or, you can drop minions to do the work for you</string>
    <string name="rules_energy">Track the robot\'s health with the energy bar</string>
    <string name="rules_twitter">If you have a Twitter account, tweet words of encouragement for your team to gain bonuses</string>
    <string name="rules_tw_enable">A solid twitter button indicates an opportunity to do so</string>
    <string name="rules_good_luck">Good luck eyes!</string>

    <!-- Buttons -->
    <string name="button_ok">OK</string>
    <string name="enter_game">Go to GameActivity</string>
    <string name="login_with_twitter">Login With Twitter</string>
    <string name="login_with_vichar">Login With Vichar</string>
    <string name="enter_test">Go to TestActivity</string>
    <string name="enter_main">Back to Main</string>
    <string name="connect">Connect</string>
    <string name="cancel">Cancel</string>
    <string name="toggle_sound">Toggle Sound</string>
    <string name="logout">Logout</string>
    <string name="tweet">tweet</string>
    <string name="button_send">Send</string>

    <!-- EditText Hints -->
    <string name="enter_pin">Enter Above Pin</string>
    <string name="enter_tw_username">Enter Twitter Username</string>
    <string name="enter_vichar_username">Enter ViChar Username</string>
    <string name="enter_tweet">#eye</string>

    <!-- Preference Keys -->
    <string name="prefs_key">prefs_key</string>
    <string name="access_token_key">access_token_key</string>
    <string name="access_token_secret_key">access_token_secret_key</string>
    <string name="toggle_sound_key">toggle_sound_key</string>
    <string name="first_launch_flag">first_launch_flag</string>
    <string name="tw_login_key">tw_login_flag_key</string>   
    <string name="screenname_key">screenname_key</string>    
    <string name="prefs_error">retrieve error</string>

    <!-- Colors -->
    <color name="myColor">#F5F5F5</color>
    <color name="game_blue">#268bd2</color>
    <color name="twitter_blue">#4099FF</color>
    <color name="twitt_blue">#4099FF</color>
    <color name="yellow_text">#FDD017</color>

    <string name="corner_radious">8dp</string>

	 <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="title_activity_main_menu">ViChar Menu</string>
    <string name="title_activity_rules">How To</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_tweet">Tweet</string>

    <string name="enter_main_menu">Main Menu</string>
    <string name="enter_about">About</string>
    <string name="enter_leaderboard">Top Scores</string>
    <string name="enter_settings">Settings</string>
    <string name="enter_rules">How To</string>
    <string name="title_activity_test_game">TestGameActivity</string>
    <string name="login">Login</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_splash_screen">SplashScreen</string>

    <string name="desc">button filling animation</string>
    <string name="guest_name">guest name</string>
    <color name="leaderboard_color">#fdf6e3</color>

</resources>