<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/about_portrait">
    
    <Button
    	android:id="@+id/to_test_game_act"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:onClick="goToTestGameAct"
    	android:text="@string/enter_game"
    	android:background="@color/game_blue"
    	android:layout_marginTop="5dp"
        android:textColor="@color/myColor" /> 

    <Button
        android:id="@+id/main_menu_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_main_menu" 
        android:background="@color/game_blue"
        android:layout_marginTop="5dp"
        android:textColor="@color/myColor"/>
    
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_info"
        tools:context=".AboutActivity" 
        android:textColor="@color/myColor"
        android:layout_marginTop="5dp"
        />
</LinearLayout>
